# agentic_ai

./: pyproject.toml
1-Foundation_Agentic_AI/: 1-First_Workflow.ipynb  2-Build_ChatBot.ipynb  3-Pydantic_data_validation.ipynb  4-Multi-LLM-Model.ipynb  5-Intelligent_agents_function_execution.ipynb  6-ollama_tool_calling.ipynb  app.py
2-AsyncIo/: 1-Demo_AsyncIO.ipynb
resources/: Summary.txt
